<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TemperatureSetting">

    <Button
        android:id="@+id/buttonGet"
        android:layout_width="202dp"
        android:layout_height="82dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:gravity="center"
        android:text="@string/getTemperature"
        android:textSize="18sp"
        android:onClick="OnGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureRead" />

    <TextView
        android:id="@+id/temperatureRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/temperatureRead"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGet"
        app:layout_constraintEnd_toStartOf="@+id/degreeC"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/degreeC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/degreeC"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temperatureRead" />

    <EditText
        android:id="@+id/desiredTemp"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/desiredTemperature"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/setButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGet"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="210dp"
        android:layout_height="87dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="146dp"
        android:text="@string/setTemperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desiredTemp"
        android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>